<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#030202"
    android:backgroundTint="#FFFFFF"
    tools:context=".inicio">

    <ImageView
        android:id="@+id/btnhistorial"
        android:layout_width="38dp"
        android:layout_height="29dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/imagen_de_un_bartender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toEndOf="@+id/Titulo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?android:attr/actionModeFindDrawable" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="38dp"
        android:layout_height="29dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/imagen_de_un_bartender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Titulo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bartender" />

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#060000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/RandomCocktailBTN"
        android:layout_width="185dp"
        android:layout_height="250dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#39898483"
        android:drawableTop="@drawable/martini"
        android:text="@string/random_cocktail"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titulo" />

    <Button
        android:id="@+id/ByNameBTN"
        android:layout_width="185dp"
        android:layout_height="250dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#39898483"
        android:drawableTop="@drawable/naranja"
        android:text="@string/search_by_name"
        android:textColor="#150202"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titulo" />

    <Button
        android:id="@+id/ByIngredientBTN"
        android:layout_width="185dp"
        android:layout_height="250dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#39898483"
        android:drawableTop="@drawable/coco"
        android:text="@string/search_by_ingredient"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ByNameBTN" />

    <Button
        android:id="@+id/CuentaBTN"
        android:layout_width="185dp"
        android:layout_height="250dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#39898483"
        android:drawableTop="@drawable/limonada"
        android:text="@string/order"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RandomCocktailBTN" />

</androidx.constraintlayout.widget.ConstraintLayout>