<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1" />


    <EditText
        android:id="@+id/editNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="New name" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="New Price"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/MostrarBebidas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#035100"
            android:text="@string/MostrarBebidas" />

        <Button
            android:id="@+id/ActulizarBebida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#EB0B0B"
            android:text="@string/ActulizarBebida" />

        <Button

            android:id="@+id/PasarApagar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/PasarApagar" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="textEnd">

        <TextView
            android:id="@+id/preciosinpropina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="200dp"
            android:text="@string/preciosinpropina"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/precioTXTShower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>