<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:background="@color/white"
    android:orientation="horizontal"
    android:padding="5dp"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="106dp"
        android:layout_weight="1"
        android:background="#FF8C8C"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ID:  "
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/IDCoctelmenuTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                tools:text="ID" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/NombreCoctelmenuTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:textSize="20sp"
                tools:text="Vodka Martini" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drinkprice"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/PrecioCoctelesmenuTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Precio" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF8C8C"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/OrdenAddBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#035100"
            android:text="@string/btnadd" />

        <Button
            android:id="@+id/deleteBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#EB0B0B"
            android:text="@string/btndelete" />

    </LinearLayout>


</LinearLayout>